--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "nodemon index.ts",
     "start:dev": "docker-compose -f dev.yaml up",
     "start:prod": "nodemon dist/index.js",
+    "build:prepare":"cp -R src/.prismaClient dist/src && cp -R node_modules dist && cp -R package.json dist",
+    "build":"npm run initPrisma && tsc && npm run build:prepare",
     "prismaStudio": "DATABASE_URL=mongodb://dev:dev@localhost:27017/dev?authSource=admin npx prisma studio",
     "initPrisma": "npx prisma generate"
   },
@@ -15,6 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/identity": "^3.1.2",
+    "@azure/keyvault-secrets": "^4.6.0",
     "@prisma/client": "^4.8.0",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
@@ -24,6 +28,7 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.30.0",
     "express": "^4.18.2",
+    "ms-rest-azure": "^3.0.2",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
